# tet-rs

./: Cargo.toml  README.md
src/: game.rs  main.rs  renderer.rs
src/rendering/: canvas.rs  color.rs  mod.rs  position.rs  texture.rs  tile.rs
src/views/: mod.rs
src/views/play_view/: field.rs  mod.rs  stones.rs  view.rs
