[package]
name = "tet-rs"
version = "0.1.0"
authors = ["Martin Beckmann <m.beckmann123@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
crossterm = {version = "0.14.1", features=["event-stream"]}
rand = "0.7"
tokio = {version="0.2.9", features=["full", "time"]}
futures = "0.3"
console = "0.9.1"