[package]
name = "tet-rs"
version = "0.1.0"
authors = ["Martin Beckmann <m.beckmann123@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.14.1", features=["event-stream"]}
rand = "0.7"
tokio = {version="0.2.9", features=["time", "io-util", "sync", "stream", "rt-core", "io-std", "macros"]}